Add alternative text for the social media links for Text browsers.

--- a/source/stylesheets/core.scss
+++ b/source/stylesheets/core.scss
@@ -96,6 +96,8 @@ body > footer {
         margin: 0 em-calc(10.5);
 
         &:hover { color: #fff; }
+
+        span { display: none; }
     }
 
     .fi-social-behance { color: #0e87f7; }
