--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -5,18 +5,25 @@
         %ul
           %li
             %a{ href: "https://twitter.com/ubax/", class: "fi-social-twitter", alt: "Follow me @ubax on Twitter" }
+              %span Follow me @ubax on Twitter
           %li
-            %a{ href: "https://facebook.com/usmanbashir", class: "fi-social-facebook", alt: "Add me Facebook" }
+            %a{ href: "https://facebook.com/usmanbashir", class: "fi-social-facebook", alt: "Add me on Facebook" }
+              %span Add me on Facebook
           %li
             %a{ href: "https://github.com/usmanbashir/", class: "fi-social-github", alt: "Follow me on Github" }
+              %span Follow me on Github
           %li
             %a{ href: "http://www.behance.net/usman", class: "fi-social-behance", alt: "Follow me on Behance" }
+              %span  Follow me on Behance
           %li
             %a{ href: "http://instagram.com/usmanbashir", class: "fi-social-instagram", alt: "Follow me on Instagram" }
+              %span Follow me on Instagram
           %li
             %a{ href: "http://www.linkedin.com/in/usmanbashir", class: "fi-social-linkedin", alt: "Add me on LinkedIn" }
+              %span Add me on LinkedIn
           %li
             %a{ href: "http://www.last.fm/user/usmanx", class: "fi-social-lastfm", alt: "Add me on Last.fm" }
+              %span Add me on Last.fm
       %nav.navigation
         %ul
           %li
