Update the books I'm currently reading.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -57,12 +57,12 @@ title: Usman Bashir, your galactic alien friend!
         %p
           %strong Currently Reading
         .book
-          %a{ href: "https://www.goodreads.com/book/show/15241.The_Two_Towers" }
-            %img{ src: "//d.gr-assets.com/books/1298415523l/15241.jpg", alt: "The Two Towers (The Lord of the Rings #2)", width: "80px" }
-            The Two Towers - The Lord of the Rings
-          %span by J.R.R. Tolkien
+          %a{ href: "https://www.goodreads.com/book/show/414999.Childhood_s_End" }
+            %img{ src: "//d.gr-assets.com/books/1320552628l/414999.jpg", alt: "Childhood's End", width: "80px" }
+            Childhood's End
+          %span by Arthur C. Clarke
         .book
-          %a{ href: "https://www.goodreads.com/book/show/1741472.Programming_Collective_Intelligence" }
-            %img{ src: "//d.gr-assets.com/books/1371685521l/1741472.jpg", alt: "Programming Collective Intelligence: Building Smart Web 2.0 Applications", width: "80px" }
-            Programming Collective Intelligence: Building Smart Web 2.0 Applications
-          %span by Toby Segaran
+          %a{ href: "https://www.goodreads.com/book/show/13586762-the-personal-mba" }
+            %img{ src: "//d.gr-assets.com/books/1348369054l/13586762.jpg", alt: "The Personal MBA: Master the Art of Business", width: "80px" }
+            The Personal MBA: Master the Art of Business
+          %span by Josh Kaufman
