Remove placeholder blog page.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,10 +23,10 @@ title: Usman Bashir, your galactic alien friend!
             %p
               While you're here, checkout some of
               = link_to "my work", "/work"
-              , learn more 
+              or learn more
               = link_to "about me", "/about-me"
               and see what
-              = link_to "I'm up to.", "/blog"
+              = link_to "I'm up to.", "/articles"
         .row
           .large-12.columns
             %ul#what-i-do
