--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -18,6 +18,8 @@
     %link{ rel: "stylesheet", href: "http://fonts.googleapis.com/css?family=Lora:700italic", type: "text/css" }
     
     = stylesheet_link_tag "application"
+
+    %link{ rel: "alternate", type: "application/atom+xml", title: "Usman Bashir's Atom Feed", href: "/feed.xml" }
   
   %body{ class: page_classes }
     = partial "layouts/unsupported_browsers"
