Update the footer feed link.

--- a/source/layouts/_footer.haml
+++ b/source/layouts/_footer.haml
@@ -33,7 +33,7 @@
           %li
             %a{ href: "/colophon" } Colophon
           %li
-            %a{ href: "/rss.xml" } RSS
+            %a{ href: "/feed.xml" } Feed
       %p
         &copy; 
         = Time.now.year
