Update the feed link and touch up the copy for the sidebar.

--- a/source/partials/_sidebar.slim
+++ b/source/partials/_sidebar.slim
@@ -4,10 +4,10 @@ aside.large-3.columns.sidebar
       p
         strong Subscribe
       span
-        | Enjoy my writing? Get notified when I create new content.
+        | Enjoy my writing? Get notified when I post something new.
       ul
         li
-          = link_to "RSS", "/rss.xml"
+          = link_to "Feed", "/feed.xml"
         li
           = link_to "Email", "/newsletter"
   .row.categories
