Updated the websites Colophon.

--- a/source/colophon.html.haml
+++ b/source/colophon.html.haml
@@ -5,15 +5,47 @@ title: Colophon - Usman Bashir
   .large-10.large-centered.columns
     %h1 Colophon
     %p
-      Hmm, for the time being, let's just go with a simple list.
-    %ul
-      %li Made on a Vagrant Ubuntu VM
-      %li Coded in VIM (seriously, every last bit)
-      %li
-        Written using HAML, SCSS and Markdown
-        %br
-        (Oh, how I love me some markdown.)
-      %li Fonts from Google
-      %li Designed in a Web Browser
-      %li Powered by Middleman
-      %li Hosted on Heroku
+      This website is set in 
+      %a{ href: "https://www.google.com/fonts/specimen/Source+Sans+Pro" }
+        Source Sans Pro by Adobe
+      and
+      %a{ href: "https://www.google.com/fonts/specimen/Lora" }
+        Lora by Cyrillic,
+      hosted by 
+      %a{ href: "https://www.google.com/fonts/" }
+        Google Fonts.
+      And, was designed in a Web Browser.
+
+    %p
+      It’s all built using open-source software. And, was coded in 
+      %a{ href:"http://www.vim.org/" }
+        Vim,
+      seriously every last bit. Written using 
+      %a{ href: "http://haml.info/" }
+        Haml,
+      %a{ href: "http://slim-lang.com/" }
+        Slim,
+      %a{ href: "http://sass-lang.com/" }
+        Sass 
+      and 
+      %a{ href: "https://en.wikipedia.org/wiki/Markdown" }
+        Markdown.
+
+    %p
+      It was developed on 
+      %a{ href: "https://www.vagrantup.com/" }
+        Vagrant 
+      %a{ href: "http://www.ubuntu.com/server" }
+        Ubuntu
+      VM,
+      %a{ href: "http://www.docker.com/" }
+        Docker
+      \& OS X. And, is generated using 
+      %a{ href: "https://middlemanapp.com/" }
+        Middleman
+      and hosted on 
+      %a{ href: "https://pages.github.com/" }
+        GitHub Pages
+      behind the 
+      %a{ href: "https://www.cloudflare.com/" }
+        CloudFlare CDN.
