Add newsletter subscription page.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -51,7 +51,7 @@ title: Usman Bashir, your galactic alien friend!
             %p
               I'll be sending out a irregular newsletter soon, called 
               %strong "Bits &amp; Bytes".
-              Each issue will feature a roundup of blog posts and links from this site as well as exclusive newsletter only content. In addition, I'll be sharing details of new products and projects I'll be working on.
+              Each issue will feature a roundup of my blog posts and links, as well as exclusive newsletter only content. In addition, I'll be sharing details of new products and projects I'll be working on.
             = partial "newsletter"
       .large-4.columns.currently-reading
         %p
