Update the books I'm currently reading.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -61,3 +61,8 @@ title: Usman Bashir, your galactic alien friend!
             %img{ src: "//d.gr-assets.com/books/1320552628l/414999.jpg", alt: "Childhood's End", width: "80px" }
             Childhood's End
           %span by Arthur C. Clarke
+        .book
+          %a{ href: "https://www.goodreads.com/book/show/24591772-hatching-twitter" }
+            %img{ src: "//d.gr-assets.com/books/1381332539l/18656827.jpg", alt: "Hatching Twitter", width: "80px" }
+            Hatching Twitter
+          %span by Nick Bilton
