Rework the mailing list signup page with the new concept.
In reference to issue #4.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -43,11 +43,11 @@ per_page: 6
                 = link_to article.title, article
           .large-6.columns.email-list
             %p
-              Want new articles before they get published? I usually send out these articles and other updates to my private email list first.
+              Want new articles before they get published? I usually send out these articles and other updates to my personal mailing list first.
             %p
               Become a friend and
               %strong
-                = link_to "join my private email list.", "/"
+                = link_to "join my personal mailing list.", "/newsletter"
 
       .large-4.columns.currently-reading
         %p.heading
