--- a/source/newsletter.html.slim
+++ b/source/newsletter.html.slim
@@ -4,11 +4,15 @@ title: Newsletter
 .row.content
   .large-10.large-centered.columns
     h1
-      | Subscribe to my Newsletter
+      | Hey, it's me Usman
     p
-      | I'll be sending out a irregular newsletter soon, called 
-      strong "Bits &amp; Bytes". 
-      | Each issue will feature a roundup of my blog posts and links, as well as exclusive newsletter only content. In addition, I'll be sharing details of new products and projects I'll be working on.
+      | Join my personal mailing list and receive an email from me at the beginning of every month. Just me, sharing my thoughts about life, work, industry and a bit of inspiration thrown in for good measure.
+    ul
+      li Including new articles, that I haven't shared anywhere else.
+      li Access to the archive with all my articles and previous publications.
+      li Updates on projects, I'm working on.
+      li Personal recommendations for books, videos and other reading material.
+      li Exclusive experimental content.
     p
-      | Though, rest assured. I hate spam and wasting your time. So, I’ll only be sending out an issue when I deem it worthwhile.
+      | I hate spam and wasting your time. You'll get neither of those from me, ever!
     = partial "newsletter"
