--- a/source/_newsletter.erb
+++ b/source/_newsletter.erb
@@ -1,16 +1,20 @@
-<div id="mc_embed_signup">
+<div id="mc_embed_signup" class="row">
 <form action="//usmanbashir.us4.list-manage.com/subscribe/post?u=297b33ec6f69dbd92d1192839&amp;id=992d1ebec0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-  <div id="mc_embed_signup_scroll">
+  <div id="mc_embed_signup_scroll" class="large-10 large-centered columns">
 
     <div class="row">
-      <div class="large-9 columns">
+      <div class="large-5 columns">
         <div class="mc-field-group">
           <input type="email" value="" name="EMAIL" placeholder="email address" class="required email" id="mce-EMAIL">
         </div>
       </div>
-
-      <div class="large-3 columns">
-        <div class="clear"><input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button tiny radius success"></div>
+      <div class="large-5 columns">
+        <div class="mc-field-group">
+            <input type="text" value="" name="FNAME" placeholder="first name" class="required" id="mce-FNAME">
+        </div>
+      </div>
+      <div class="large-2 columns">
+        <input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button tiny radius success">
       </div>
     </div>
 
